Fixing the navigation arrows not showing fully on certain pages
Changed the specificity to only the main content of the page - excluded the Navigation.

--- a/src/pages/baa.module.scss
+++ b/src/pages/baa.module.scss
@@ -2,6 +2,13 @@
 
 .baaPage {
   /* Styles unique to this page component */
+  .baa {
+    li {
+      padding-top: 5px;
+      padding-bottom: 5px;
+    }
+  }
+
   .gbiBaa:before,
   .gbiBaa:after {
     background-position: initial !important;
@@ -46,11 +53,6 @@
 
   h4 {
     font-size: 1.5rem;
-  }
-
-  li {
-    padding-top: 5px;
-    padding-bottom: 5px;
   }
 
   .underlined {
